20140718		3.5.2
	- Fix blank SCSI ID in scsi2sd-config output.

20140717		3.5.1
	- Allow building utilities on older Linux distros
	- Resolve missing DLL issues for the Windows utilities
	- Fix scsi2sd-config crash on Mac.

20140713		3.5
	- Fixed several performance issues. Transfer rates up to 2.5MB/s are now
	possible.
	- Implemented the READ BUFFER scsi command for performance testing purposes.
	- Added support for the new "yellow" v4.2 revision boards.
	- Improved firmware uploading. bootloaderhost can now reset the board back
	to the bootloader.
	- Display firmware version in scsi2sd-config
	- Add "--reset" parameter to scsi2sd-config

20140418		3.4
	- Critical fix for writes when using non-standard block sizes.
	- Fix to ensure SCSI phase bits are set atomically.
	- Always return the requested number of bytes for a REQUEST SENSE command
		This is required to support the Ensoniq ASR-10.
	- Decreased (unused) heap and stack sizes to prepare for a memory
	write cache
	- Increased the maximum sector size to 8192 bytes.

20140416		3.3
	- Fix to SCSI Reset handling to avoid lockups
	- Bug fixes to improve standards compatibility
	- Bug fix for Unit Attention Condition, which is now enabled by default.
		scsi2sd-config can be used to disable it for those systems that
		truely require it (eg. Mac Plus).
	- Added Linked commands support.
	- Added support for configurable sector sizes between 64 and 2048 bytes.
		The sector size can be set via the MODE SELECT command using a SCSI
		format utility, or via scsi2sd-config
	- Powerbook firmware added

20140214		3.2
	- Remove hacks around ATN handling, and implement proper select-with-atn
	support.  This fix is essential for communicating with some SCSI hosts.
	All SCSI2SD users are urged to upgrade to this firmware version.
	- More fixes to support Apple HD SC Setup (thanks to Doug Brown!)
	- Fixes to support SCSI1 initiators
		* Support non-arbitrating initiators.
		* Support single-initiator option.