@@ -1,3 +1,6 @@
+201407XX		3.6
+	- Fix handling requests for LUNs other than 0 from SCSI-2 hosts.
+
 20140718		3.5.2
 	- Fix blank SCSI ID in scsi2sd-config output.
 
